# take_home_assignment

./: .gitignore  Instructions.md  README.md  SETUP.md  compose.yaml  db.py  docker-compose.yml  go.mod  pyproject.toml  verify.py
clients/reznar/: ontology.py  pyproject.toml
clients/stormland/: ontology.py  pyproject.toml
cmd/extract/: main.go
cmd/verify/: main.go
database/: schema.go  sqlc.yaml
database/query/: queries.sql
database/schema/: foundation.sql
db/: db.go
reznar/: ontology.py
stormland/: example.go  example_test.go  ontology.py  schema.go  sqlc.yaml
stormland/query/: stormland.sql
stormland/schema/: foundation.sql  landlord.sql  lease.sql  property.sql  tenant.sql  types.sql
