[project]
name = "reznar-take-home"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "pgserver>=0.1",
    "pydantic>=2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
