[project]
name = "stormland"
version = "0.1.0"
description = "StormlandHoldings real estate ontology — included as a reference example."
requires-python = ">=3.12"
dependencies = ["atlas"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stormland"]
package-dir = {stormland = "."}
